# nd-async-rusqlite-rs

./: .gitignore  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: Build.yml  Doc.yml
examples/: simple.rs  wal-pool.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
nd_async_rusqlite/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.AsyncConnection.html  struct.AsyncConnectionBuilder.html  struct.SyncWrapper.html  struct.WalPool.html  struct.WalPoolBuilder.html
nd_async_rusqlite/async_connection/: struct.AsyncConnection.html  struct.AsyncConnectionBuilder.html
nd_async_rusqlite/async_connection/builder/: struct.AsyncConnectionBuilder.html
nd_async_rusqlite/sync_wrapper/: struct.SyncWrapper.html
nd_async_rusqlite/wal_pool/: struct.WalPool.html
nd_async_rusqlite/wal_pool/builder/: struct.WalPoolBuilder.html
search.desc/nd_async_rusqlite/: nd_async_rusqlite-desc-0-.js
search.index/: 0d78783dd84b.js  1f694c9b0831.js  52718041204b.js  538fe9cd7d4c.js  596c76b52cce.js  5b33fe4be127.js  642c7f1c63e6.js  7fec55ae4672.js  root.js
search.index/crateNames/: 3eed2cf8bde6.js
search.index/desc/: f9824d724b48.js
search.index/entry/: 3bc249a8b7e2.js  d04df5006afe.js
search.index/function/: 21b6d433ebec.js  b49bf03cc0a5.js
search.index/generic_inverted_index/: 66d43f6ef4ac.js  6b7e8acbb7f3.js
search.index/name/: 6f7761db0f6f.js  f4b579bbf4e2.js
search.index/normalizedName/: 81fd420a7e53.js  de1dc6839a30.js
search.index/path/: 39e645f629f8.js  e20c2c68b1b3.js
search.index/type/: c5ea49138527.js  ee14390fd62a.js
src/: async_connection.rs  lib.rs  sync_wrapper.rs  wal_pool.rs
src/async_connection/: builder.rs
src/nd_async_rusqlite/: async_connection.rs.html  lib.rs.html  sync_wrapper.rs.html  wal_pool.rs.html
src/nd_async_rusqlite/async_connection/: builder.rs.html
src/nd_async_rusqlite/wal_pool/: builder.rs.html
src/wal_pool/: builder.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
(+12 files in other folders)
