[package]
name = "nd-async-rusqlite"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rusqlite = "0.29.0"
tokio = { version = "1.33.0", features = ["sync"] }

# wal-pool
crossbeam-channel = { version = "0.5.8", optional = true }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt"] }

[features]
# Activate the rusqlite "bundled" feature
bundled = ["rusqlite/bundled"]

# Activate the rusqlite "time" feature
time = ["rusqlite/time"]

# Activate the rusqlite "url" feature
url = ["rusqlite/url"]

wal-pool = ["crossbeam-channel"]
