[package]
name = "nd-async-rusqlite"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rusqlite = "0.30.0"
tokio = { version = "1.34.0", features = ["sync"] }

# wal-pool
crossbeam-channel = { version = "0.5.8", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }

[features]
# Activate the rusqlite "bundled" feature
bundled = ["rusqlite/bundled"]

# Activate the rusqlite "time" feature
time = ["rusqlite/time"]

# Activate the rusqlite "trace" feature

# Activate the rusqlite "url" feature
trace = ["rusqlite/trace"]

wal-pool = ["crossbeam-channel"]
