[package]
name = "nd-async-rusqlite"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rusqlite = "0.38.0"
tokio = { version = "1.49.0", features = ["sync"] }

# wal-pool
crossbeam-channel = { version = "0.5.15", optional = true }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt"] }

[features]
# Activate the rusqlite "array" feature
array = ["rusqlite/array"]

# Activate the rusqlite "backup" feature
backup = ["rusqlite/backup"]

# Activate the rusqlite "bundled" feature
bundled = ["rusqlite/bundled"]

# Activate the rusqlite "cache" feature
cache = ["rusqlite/cache"]

# Activate the rusqlite "fallible_uint" feature
fallible_uint = ["rusqlite/fallible_uint"]

# Activate the rusqlite "functions" feature
functions = ["rusqlite/functions"]

# Activate the rusqlite "time" feature
time = ["rusqlite/time"]

# Activate the rusqlite "trace" feature
trace = ["rusqlite/trace"]

# Activate the rusqlite "url" feature
url = ["rusqlite/url"]

wal-pool = ["crossbeam-channel"]
